--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="articleSubMenuColor">#d65555</color>
     <color name="white">#FFFFFF</color>
+    <color name="bottom_bar_color">#F8784F</color>
 </resources>
