--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,11 +43,10 @@
     <ru.zavanton.image.ui.view.CustomBottomBar
         android:id="@+id/customBottomBar"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="@dimen/custom_bottom_bar_height"
         android:layout_gravity="bottom"
-
+        android:elevation="4dp"
         app:layout_insetEdge="bottom"
         />
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
