--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="articleSubMenuMargin">8dp</dimen>
+    <dimen name="custom_bottom_bar_height">56dp</dimen>
 </resources>
