top bar behavior

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,23 @@
     android:layout_height="match_parent"
     >
 
+    <TextView
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:minHeight="56dp"
+        android:layout_gravity="top"
+        android:background="@color/topBarColor"
+        android:elevation="4dp"
+        android:gravity="center_vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="@string/top_bar"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_behavior=".ui.behavior.TopBarBehavior"
+        />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
@@ -44,9 +61,9 @@
         android:id="@+id/customBottomBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/custom_bottom_bar_height"
-        android:minHeight="@dimen/custom_bottom_bar_height"
         android:layout_gravity="bottom"
         android:elevation="4dp"
+        android:minHeight="@dimen/custom_bottom_bar_height"
         app:layout_insetEdge="bottom"
         />
 
