--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="bottom_bar_color">#F8784F</color>
     <color name="topBarColor">#4CAF50</color>
+    <color name="middleBarColor">#E91E63</color>
 </resources>
