--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <androidx.core.widget.NestedScrollView
@@ -36,6 +37,7 @@
         android:textSize="14sp"
         android:visibility="gone"
         tools:visibility="visible"
+        app:layout_dodgeInsetEdges="bottom"
         />
 
     <ru.zavanton.image.ui.view.BottomBar
@@ -45,6 +47,7 @@
         android:layout_gravity="bottom"
         android:elevation="4dp"
         android:minHeight="@dimen/custom_bottom_bar_height"
+        app:layout_insetEdge="bottom"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
