--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,10 +45,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ru.zavanton.image.ui.view.CustomFab
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:tint="@color/white"
         android:src="@android:drawable/ic_dialog_email"
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|center"
