--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,11 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_behavior=".ui.behavior.OverScrollBehavior"
         >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/yellow"
@@ -49,8 +51,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="@color/white"
         android:src="@android:drawable/ic_dialog_email"
+        android:tint="@color/white"
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|center"
         />
@@ -63,6 +65,7 @@
         app:fabSize="mini"
         app:layout_anchor="@id/fab"
         app:layout_anchorGravity="center"
+        app:layout_behavior=".ui.behavior.HideFabBehavior"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -73,6 +76,7 @@
         app:fabSize="mini"
         app:layout_anchor="@id/fab"
         app:layout_anchorGravity="center"
+        app:layout_behavior=".ui.behavior.HideFabBehavior"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -83,6 +87,7 @@
         app:fabSize="mini"
         app:layout_anchor="@id/fab"
         app:layout_anchorGravity="center"
+        app:layout_behavior=".ui.behavior.HideFabBehavior"
         />
 
     <androidx.core.widget.NestedScrollView
